tests/csmith/bad/smith001232.c
/*
 * This is a RANDOMLY GENERATED PROGRAM.
 *
 * Generator: csmith 2.0.0
 * svn version: exported
 * Options:   --check-global -s 1232
 * Seed:      1232
 */

#include "random_runtime.h"


long __undefined;

/* --- Struct/Union Declarations --- */
/* --- GLOBAL VARIABLES --- */
int64_t g_4[5] = {0xCCCDDD1D8F8F576CLL, 0xCCCDDD1D8F8F576CLL, 0xCCCDDD1D8F8F576CLL, 0xCCCDDD1D8F8F576CLL, 0xCCCDDD1D8F8F576CLL};


/* --- FORWARD DECLARATIONS --- */
int16_t  func_1(void);


/* --- FUNCTIONS --- */
/* ------------------------------------------ */
/* 
 * reads : g_4
 * writes: g_4
 */
int16_t  func_1(void)
{ /* block id: 0 */
    uint32_t l_2 = 0x252CB136L;
    int32_t *l_3[8];
    int i;
    for (i = 0; i < 8; i++)
        l_3[i] = 0;
    g_4[4] = (l_2 <= 0xCF54C3C6L);
    return g_4[1];
}




/* ---------------------------------------- */
int main (int argc, char* argv[])
{
    int i;
    func_1();
    printf("checksum g_4[0] = %d\n", g_4[0]);
    printf("checksum g_4[1] = %d\n", g_4[1]);
    printf("checksum g_4[2] = %d\n", g_4[2]);
    printf("checksum g_4[3] = %d\n", g_4[3]);
    printf("checksum g_4[4] = %d\n", g_4[4]);
    printf("checksum g_4[4] = %d\n", g_4[4]);
}

/************************ statistics *************************
XXX max struct depth: 0
breakdown:
   depth: 0, occurrence: 3

XXX max expression depth: 0
breakdown:
   depth: 0, occurrence: 2

XXX total number of pointers: 1

XXX times a variable address is taken: 0
XXX times a pointer is dereferenced on RHS: 0
breakdown:
XXX times a pointer is dereferenced on LHS: 0
breakdown:
XXX times a pointer is compared with null: 0
XXX times a pointer is compared with address of another variable: 0
XXX times a pointer is compared with another pointer: 0
XXX times a pointer is qualified to be dereferenced: 0
XXX number of pointers point to pointers: 0
XXX number of pointers point to scalars: 1
XXX number of pointers point to structs: 0
XXX percent of pointers has null in alias set: 100
XXX average alias set size: 1

XXX times a non-volatile is read: 2
XXX times a non-volatile is write: 1
XXX times a volatile is read: 0
XXX    times read thru a pointer: 0
XXX times a volatile is write: 0
XXX    times written thru a pointer: 0
XXX times a volatile is available for access: 0
XXX percentage of non-volatile access: 100

XXX forward jumps: 0
XXX backward jumps: 0

XXX stmts: 3

XXX percentage a fresh-made variable is used: 40
XXX percentage an existing variable is used: 60
********************* end of statistics **********************/

